# reader

./: README.md  main.rs
reader/: index.html  package-lock.json  package.json  tailwind.config.js
reader/src/: App.tsx  styles.css
reader/src-book/: foo.json
reader/src-tauri/: Cargo.toml  foo.json  tauri.conf.json
reader/src-tauri/icons/: icon.icns
reader/src-tauri/src/: main.rs  myepub.rs  myreader.rs  note_to_self.txt
reader/src/components/: bottom-bar.tsx  chapter-block.tsx  idea.txt  message-block copy.tsx  message-block.tsx  message.tsx  reader.tsx  top-bar.tsx
reader/src/styles/: master.css  menu.css  messages.css  reader.css
