[package]
name = "reader"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["macos-private-api", "api-all"] }
serde = { version = "1.0", features = ["derive"] }
epub = "1.2.2"
html_parser = "0.7.0"
serde_json = "1.0.102"
window-vibrancy = "0.4.0"
cocoa = "0.25.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
